folder structure change

--- a/admin/admin_css/admin2.css
+++ b/admin/admin_css/admin2.css
@@ -1,6 +1,5 @@
 .service_input_area {
-    width: 95%;
-
+    width           : 95%;
     background-color: white;
     border-radius   : 1em;
     margin          : 2em auto;
@@ -8,9 +7,6 @@
     flex-flow       : wrap;
     justify-content : space-between;
     position        : relative;
-
-
-
 }
 
 .service_input_area>* {
@@ -22,13 +18,13 @@
 
 .input_flex label {
     margin-bottom: .5em;
-    font-size    : 1.2em;
+    font-size    : 1.5em;
 }
 
 #service_name,
 #description {
-    padding  : .8em;
-    font-size: 1em;
+    padding  : .3em;
+    font-size: 1.5em;
     outline  : 0;
 }
 
@@ -37,7 +33,7 @@
 }
 
 .inputFileLabel>img {
-    width       : 20%;
+    width       : 15%;
     color       : #251D58;
     margin-right: 5px;
 }
@@ -47,8 +43,8 @@
     border          : 1px solid #251D58;
     border-radius   : 8px;
     color           : #251D58;
-    padding         : .3em .8em;
-    width           : 180px;
+    padding         : .3em 1.5em;
+    width           : 250px;
     display         : flex;
     align-items     : center;
     background-color: #EDEAFF;
