--- a/admin/admin_css/common_sidebar.css
+++ b/admin/admin_css/common_sidebar.css
@@ -20,7 +20,7 @@ header {
     display       : flex;
     flex-direction: column;
     align-items   : center;
-    position       : relative;
+    position      : relative;
 }
 
 .home_link {
@@ -95,68 +95,8 @@ li:hover {
     height          : 90vh;
 }
 
-/* ######################### */
-/*        Table Start        */
-/* ######################### */
-
-
-
-
-.admin_table_service_list {
-
-    margin          : 2em auto;
-    cursor          : pointer;
-    background-color: white;
-    border-collapse : collapse;
-    font-size       : 1.5em;
-}
-
-
-.admin_table_service_list th {
-    padding         : 1em;
-    background-color: cadetblue;
-    text-align      : left;
-}
-
-.admin_table_service_list td {
-    border : 1px solid #ddd;
-    padding: .2em 1em;
-}
-
-tr th:first-child {
-    border-top-left-radius      : 10px;
-    /* border-bottom-left-radius: 10px; */
-}
-
-tr th:last-child {
-    border-top-right-radius      : 10px;
-    /* border-bottom-right-radius: 10px; */
-}
-
-tr:hover {
-    background-color: #f5f5f5;
-}
-
-select {
-    padding      : .5em;
-    border       : 0;
-    outline      : 0;
-    border-radius: 10px;
-    font-size    : 1em;
-    font-family  : Cambria;
-    cursor       : pointer;
-}
-
-
-
-.pending {
-    color: red;
-}
-
-.on_going {
-    color: #FFC556;
-}
-
-.done {
-    color: #009444;
+@media (max-width: 1080px) {
+    .home_link {
+        bottom: -4em;
+    }
 }
