--- a/admin/admin_css/2_add_service.css
+++ b/admin/admin_css/2_add_service.css
@@ -35,7 +35,7 @@
 .inputFileLabel>img {
     width       : 15%;
     color       : #251D58;
-    margin-right: 5px;
+    margin-right: .3em;
 }
 
 .inputFileLabel {
