--- a/css/admin_css/3_make_admin.css
+++ b/css/admin_css/3_make_admin.css
@@ -1,9 +1,12 @@
 .admin_making_area {
     width           : 95%;
+    height          : 400px;
     background-color: white;
     border-radius   : 1em;
     margin          : 2em auto;
-    padding         : 1em;
+    padding         : 2em;
+}
+.admin_making_input{
     display         : flex;
     align-items     : flex-end;
 }
