--- a/css/admin_css/2_add_service.css
+++ b/css/admin_css/2_add_service.css
@@ -34,15 +34,15 @@
 
 .inputFileLabel>img {
     width       : 15%;
-    color       : #251D58;
+    color       : #005691;
     margin-right: .3em;
 }
 
 .inputFileLabel {
     cursor          : pointer;
-    border          : 1px solid #251D58;
+    border          : 1px solid #005691;
     border-radius   : 8px;
-    color           : #251D58;
+    color           : #005691;
     padding         : .3em 1.5em;
     width           : 250px;
     display         : flex;
@@ -65,12 +65,12 @@
     border-radius   : .5em;
     border          : 0;
     outline         : 0;
-    background-color: #251D58;
+    background-color: #005691;
     color           : white;
     font-size       : 22px;
     transition      : .2s ease;
 }
 
 .btn_submit:hover {
-    box-shadow: 2px 2px 10px 0px #251D58;
+    box-shadow: 2px 2px 10px 0px #005691;
 }
