--- a/css/admin_css/3_make_admin.css
+++ b/css/admin_css/3_make_admin.css
@@ -36,12 +36,12 @@
     border-radius   : .5em;
     border          : 0;
     outline         : 0;
-    background-color: #251D58;
+    background-color: #005691;
     color           : white;
     font-size       : 22px;
     transition      : .2s ease;
 }
 
 .btn_submit:hover {
-    box-shadow: 2px 2px 10px 0px #251D58;
+    box-shadow: 2px 2px 10px 0px #005691;
 }
