--- a/css/client_css/1_service.css
+++ b/css/client_css/1_service.css
@@ -59,14 +59,14 @@
     border-radius   : .5em;
     border          : 0;
     outline         : 0;
-    background-color: #251D58;
+    background-color: #005691;
     color           : white;
     font-size       : 22px;
     transition      : .2s ease;
 }
 
 .btn_submit:hover {
-    box-shadow: 2px 2px 10px 0px #251D58;
+    box-shadow: 2px 2px 10px 0px #005691;
 }
 
 .fl_right {
