service section ok

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,8 @@ ul li a:hover,
 }
 
 
-.title_box button {
+.title_box button,
+.service_area button {
     padding         : .6em 2em;
     background-color: #005691;
     border          : 0;
@@ -149,7 +150,8 @@ ul li a:hover,
     transition      : .2s ease;
 }
 
-.title_box button:hover {
+.title_box button:hover,
+.service_area button:hover {
     box-shadow: 2px 2px 10px 0 #005691;
 }
 
@@ -275,8 +277,60 @@ ul li a:hover,
 /*  Section 3 : Service Area Start  */
 /* ################################ */
 
+.service_area {
+    display         : flex;
+    flex-direction  : column;
+    align-self      : center;
+    justify-content : space-between;
+    background-color: #F6F6F6;
+    text-align      : center;
+    margin          : 1em 0;
+    padding         : 3em 0;
+}
 
+.service_area button {
+    margin-top: 1.5em;
+    width     : 220px;
 
+}
+
+.service_title {
+    margin-bottom: 2em;
+}
+
+.service_price {
+    font-weight: bold;
+}
+
+.service_container {
+    display        : flex;
+    flex-flow      : wrap;
+    align-items    : center;
+    justify-content: center;
+}
+
+.service_card {
+    cursor       : pointer;
+    width        : 300px;
+    margin-bottom: 1.5em;
+    margin-left  : 1em;
+    border-radius: 5px;
+    padding      : 1em;
+    border       : .5px dotted black;
+    transition   : .2s ease;
+}
+
+.service_card:hover {
+    box-shadow: 2px 2px 10px 0 gray;
+}
+
+.service_card img {
+    width: 50%;
+}
+
+.service_card p {
+    margin-bottom: .5em;
+}
 
 
 
