Review Section ==> OK

--- a/css/style.css
+++ b/css/style.css
@@ -332,13 +332,81 @@ ul li a:hover,
     margin-bottom: .5em;
 }
 
-
-
-
-
-
-
-
 /* ################################ */
 /*          Section 3 : End         */
 /* ################################ */
+
+
+/* #################################### */
+/*  Section 4 : User Review Area Start  */
+/* #################################### */
+
+.user_review_area {
+    display       : flex;
+    flex-direction: column;
+    align-items   : center;
+    margin-bottom : 1em;
+}
+
+.user_review_area h2 {
+    margin: 1em 0;
+}
+
+.user_review_card_container {
+    display        : flex;
+    flex-wrap      : wrap;
+    justify-content: center;
+    align-items    : center;
+}
+
+.user_review_card {
+    width           : 380px;
+    padding         : 1em;
+    margin          : 0 1em 1em 0;
+    cursor          : pointer;
+    background-color: #F6F6F6;
+    border-radius   : 10px;
+    transition      : .2s ease;
+}
+
+.user_review_card:hover {
+    box-shadow: 2px 2px 10px 0 lightgray;
+}
+
+.user_box {
+    display    : flex;
+    align-items: center;
+}
+
+.user_img {
+    width       : 70px;
+    margin-right: .7em;
+}
+
+.user_img img {
+    width        : 100%;
+    border-radius: 50%;
+    border       : .5px dotted black;
+}
+
+.user_info {
+    margin-bottom: .5em;
+}
+
+.user_review {
+    margin: 1em 0;
+}
+
+.user_rating {
+    display: flex;
+    width  : 25px
+}
+
+.user_rating img {
+    width       : 100%;
+    margin-right: .5em;
+}
+
+/* #################################### */
+/*          Section 4 : End             */
+/* #################################### */
