--- a/css/style.css
+++ b/css/style.css
@@ -342,10 +342,12 @@ ul li a:hover,
 /* #################################### */
 
 .user_review_area {
-    display       : flex;
-    flex-direction: column;
-    align-items   : center;
-    margin-bottom : 1em;
+    display        : flex;
+    flex-direction : column;
+    align-items    : center;
+    justify-content: space-between;
+    text-align     : center;
+    margin-bottom  : 1em;
 }
 
 .user_review_area h2 {
@@ -354,9 +356,10 @@ ul li a:hover,
 
 .user_review_card_container {
     display        : flex;
-    flex-wrap      : wrap;
+    flex-flow      : row wrap;
     justify-content: center;
     align-items    : center;
+    margin-bottom  : 1em;
 }
 
 .user_review_card {
@@ -370,7 +373,7 @@ ul li a:hover,
 }
 
 .user_review_card:hover {
-    box-shadow: 2px 2px 10px 0 lightgray;
+    box-shadow: 2px 2px 15px 0 lightgray;
 }
 
 .user_box {
@@ -386,7 +389,7 @@ ul li a:hover,
 .user_img img {
     width        : 100%;
     border-radius: 50%;
-    border       : .5px dotted black;
+
 }
 
 .user_info {
