--- a/css/style.css
+++ b/css/style.css
@@ -412,3 +412,79 @@ ul li a:hover,
 /* #################################### */
 /*          Section 4 : End             */
 /* #################################### */
+
+
+
+/* #################################### */
+/*  Section 6 : Footer Area Start       */
+/* #################################### */
+.footer_area {
+    background-color: #251D58;
+    height          : 500px;
+    display         : flex;
+    flex-direction  : column;
+    flex-wrap       : wrap;
+    align-items     : center;
+    justify-content : space-around;
+}
+
+/* div.footer_area > * {
+    color: #FFF
+} */
+
+.footer_area h2 {
+    margin-bottom: .5em;
+}
+
+.details_info {
+    width          : 80%;
+    display        : flex;
+    flex-wrap      : wrap;
+    justify-content: space-evenly;
+    align-items    : flex-start;
+}
+
+.details_info>* {
+    margin-left: 1em;
+}
+
+.address * {
+    color: #FFF
+}
+
+.pages {}
+
+div.pages * {
+    color: #FFF
+}
+
+
+.links ul {
+    display       : flex;
+    flex-direction: column;
+
+    align-items    : flex-start;
+    justify-content: flex-start;
+    line-height    : .1em;
+}
+
+
+.about_us {
+    flex-basis: 350px;
+}
+
+.about_us * {
+    color: #FFF
+}
+
+.social_icons {}
+
+
+
+.copyright {
+    text-align: center;
+}
+
+.copyright * {
+    color: #FFF
+}
