--- a/css/admin_css/2_add_service.css
+++ b/css/admin_css/2_add_service.css
@@ -1,3 +1,7 @@
+:root {
+    --mainColour: var(--mainColour);
+}
+
 .service_input_area {
     width           : 95%;
     background-color: white;
@@ -34,21 +38,22 @@
 
 .inputFileLabel>img {
     width       : 15%;
-    color       : #005691;
+    color       : var(--mainColour);
     margin-right: .3em;
 }
 
 .inputFileLabel {
     cursor          : pointer;
-    border          : 1px solid #005691;
+    border          : 1px solid var(--mainColour);
     border-radius   : 8px;
-    color           : #005691;
-    padding         : .3em 1.5em;
+    color           : var(--mainColour);
+    padding         : .3em 1em;
     width           : 250px;
     display         : flex;
     align-items     : center;
     background-color: #EDEAFF;
     transition      : .2s ease;
+    border          : .5px dotted black;
 }
 
 .inputFileLabel:hover {
@@ -65,12 +70,12 @@
     border-radius   : .5em;
     border          : 0;
     outline         : 0;
-    background-color: #005691;
+    background-color: var(--mainColour);
     color           : white;
     font-size       : 22px;
     transition      : .2s ease;
 }
 
 .btn_submit:hover {
-    box-shadow: 2px 2px 10px 0px #005691;
+    box-shadow: 2px 2px 10px 0px var(--mainColour);
 }
