--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     text-decoration: none;
 }
 
+:root {
+    --mainColour: #005691;
+}
+
 body {
     font-family: Cambria;
 }
@@ -45,7 +49,7 @@ ul li a {
 
 ul li a:hover,
 .active {
-    background-color: #005691;
+    background-color: var(--mainColour);
     border-radius   : 5px;
     color           : white;
 }
@@ -118,7 +122,7 @@ ul li a:hover,
 }
 
 .title_box h1 {
-    color        : #005691;
+    color        : var(--mainColour);
     font-size    : 4em;
     line-height  : .9em;
     margin-bottom: .2em;
@@ -140,7 +144,7 @@ ul li a:hover,
 .title_box button,
 .service_area button {
     padding         : .6em 2em;
-    background-color: #005691;
+    background-color: var(--mainColour);
     border          : 0;
     outline         : 0;
     cursor          : pointer;
@@ -152,7 +156,7 @@ ul li a:hover,
 
 .title_box button:hover,
 .service_area button:hover {
-    box-shadow: 2px 2px 10px 0 #005691;
+    box-shadow: 2px 2px 10px 0 var(--mainColour);
 }
 
 .image_box {
@@ -431,10 +435,26 @@ ul li a:hover,
 /* div.footer_area > * {
     color: #FFF
 } */
+.footer_area * {
+    color: white
+}
+/* .address * {
+    color: #FFF
+} */
+/* div.pages * {
+    color: #FFF
+} */
+/* .about_us * {
+    color: #FFF
+} */
+/* .copyright * {
+    color: #FFF
+} */
 
 .footer_area h2 {
     margin-bottom: .5em;
 }
+
 
 .details_info {
     width          : 80%;
@@ -448,43 +468,18 @@ ul li a:hover,
     margin-left: 1em;
 }
 
-.address * {
-    color: #FFF
-}
-
-.pages {}
-
-div.pages * {
-    color: #FFF
-}
-
-
 .links ul {
-    display       : flex;
-    flex-direction: column;
-
+    display        : flex;
+    flex-direction : column;
     align-items    : flex-start;
     justify-content: flex-start;
     line-height    : .1em;
 }
 
-
 .about_us {
     flex-basis: 350px;
 }
 
-.about_us * {
-    color: #FFF
-}
-
-.social_icons {}
-
-
-
 .copyright {
     text-align: center;
-}
-
-.copyright * {
-    color: #FFF
 }
